objects/Project_Member__c.object
<CustomObject>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Members</relationshipLabel>
        <relationshipName>Project_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Member</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Project Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>